Add restart command jump list entry.

--- a/PomodoroTimer/PomodoroTimer.fsproj
+++ b/PomodoroTimer/PomodoroTimer.fsproj
@@ -64,6 +64,7 @@
     <Resource Include="TimeLine.xaml" />
     <None Include="Generate3DEffect.cs" />
     <Resource Include="Icon.xaml" />
+    <Resource Include="Application.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
