--- a/PomodoroTimer/PomodoroTimer.fsproj
+++ b/PomodoroTimer/PomodoroTimer.fsproj
@@ -14,6 +14,7 @@
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <Name>PomodoroTimer</Name>
     <TargetFrameworkProfile />
+    <Win32Resource>Resources.res</Win32Resource>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,6 +66,9 @@
     <None Include="Generate3DEffect.cs" />
     <Resource Include="Icon.xaml" />
     <Resource Include="Application.xaml" />
+    <None Include="Resources.rc" />
+    <Resource Include="resources\restart.ico" />
+    <Resource Include="resources\quit.ico" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core">
@@ -99,6 +103,10 @@
     <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
