--- a/PomodoroTimer/PomodoroTimer.fsproj
+++ b/PomodoroTimer/PomodoroTimer.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="MidPointConverter.fs" />
+    <Compile Include="ExtendedScrollViewer.fs" />
     <Compile Include="App.fs" />
     <Content Include="packages.config" />
     <Resource Include="MainWindow.xaml" />
